--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -18,7 +18,7 @@ body {
   box-shadow: 6px 0px 6px 0px lightgray;
   overflow-y: scroll;
   overflow-x: hidden;
-  z-index: -1;
+  z-index: 1;
 }
 
 .contacts-first-letter-container {
